--- a/src/main/resources/com/example/d_personales/hello-view.fxml
+++ b/src/main/resources/com/example/d_personales/hello-view.fxml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.d_personales.HelloController">
+<VBox alignment="CENTER" prefHeight="324.0" prefWidth="421.0" spacing="20.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.d_personales.HelloController">
     <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+   <Label text="Datos Personales" />
+   <Pane prefHeight="240.0" prefWidth="381.0">
+      <children>
+      
+          <Label fx:id="welcomeText" layoutX="116.0" layoutY="194.0" prefHeight="17.0" prefWidth="204.0" />
+          <Button layoutX="43.0" layoutY="190.0" onAction="#onHelloButtonClick" text="Hello!" />
+         <Label layoutX="53.0" layoutY="31.0" text="ID" />
+         <TextField fx:id="textId" layoutX="116.0" layoutY="27.0" />
+         <Label layoutX="53.0" layoutY="62.0" text="Nombre" />
+         <TextField fx:id="textNombre" layoutX="116.0" layoutY="58.0" />
+         <Label layoutX="53.0" layoutY="93.0" text="Apellido" />
+         <TextField fx:id="textApellido" layoutX="116.0" layoutY="89.0" />
+         <Label layoutX="53.0" layoutY="124.0" text="Edad" />
+         <TextField fx:id="textEdad" layoutX="116.0" layoutY="120.0" />
+         <Label layoutX="53.0" layoutY="153.0" text="Profesion" />
+         <TextField fx:id="textProfession" layoutX="116.0" layoutY="149.0" />
+         <Button layoutX="276.0" layoutY="26.0" mnemonicParsing="false" onAction="#onBottonIngresar" prefHeight="25.0" prefWidth="91.0" text="Ingresar" />
+         <Label fx:id="welcomeText1" layoutX="126.0" layoutY="204.0" prefHeight="17.0" prefWidth="140.0" />
+         <Button layoutX="275.0" layoutY="67.0" mnemonicParsing="false" onAction="#onBottonVer" prefHeight="25.0" prefWidth="91.0" text="Ver por ID" />
+         <Button layoutX="275.0" layoutY="106.0" mnemonicParsing="false" onAction="#onBottonBorrar" prefHeight="25.0" prefWidth="91.0" text="Borrar por ID" textAlignment="CENTER" />
+         <Button layoutX="275.0" layoutY="141.0" mnemonicParsing="false" onAction="#onBottonActualizar" prefHeight="25.0" prefWidth="91.0" text="Actualizar" />
+      </children>
+   </Pane>
 </VBox>
